# pythonic-fp-queues

./: CHANGELOG.rst  README.md  README.rst  pyproject.toml
.github/workflows/: static.yml
docs/: Makefile  conf_custom.py  conf_devel.py  conf_release.py  gen_conf.py  index_custom.rst  index_devel.rst  index_release.rst
docs/source/: api.rst  changelog.rst  conf.py  description.rst  index.rst  releases.rst  usage.rst
docs/source/docs/: de.rst  fifo.rst  index.rst  lifo.rst
src/pythonic_fp/queues/: __init__.py  de.py  de.pyi  fifo.py  fifo.pyi  lifo.py  lifo.pyi
tests/: test_queues.py
