[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pythonic-fp.queues"
version = "3.0.0"
authors = [{ name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" }]
license = { file = "LICENSE" }
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dynamic = ["description"]
keywords = [
    "queue",
    "fifo",
    "lifo",
    "dqueue",
]
dependencies = [
    "pythonic-fp.circulararray >= 5.1.0, < 5.2",
    "pythonic-fp.containers >=2.0.0, <2.1",
    "pythonic-fp.fptools >=3.0.0, <3.1",
]

[project.optional-dependencies]
test = [
    "pytest >=8.3.5",
]

[project.urls]
Homepage = "https://github.com/grscheller/pythonic-fp/blob/main/README.rst"
Source = "https://github.com/grscheller/pythonic-fp-queues"
Changelog = "https://github.com/grscheller/pythonic-fp-queues/blob/main/CHANGELOG.rst"
Documentation = "https://grscheller.github.io/pythonic-fp/maintained/queues"

[tool.flit.sdist]
exclude = ["dist", "tests", ".gitignore", ".mypy_cache", ".pytest_cache"]

[tool.pylsp-mypy]
enabled = true
live-mode = true
strict = true
report_progress = true

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
implicit_reexport = false
local_partial_types = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
consider_namespace_packages = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
