[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pythonic-fp-queues"
version = "5.1.2"
readme = "README.rst"
requires-python = ">=3.13"
authors = [
  { name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" },
]
keywords = [
  "queue",
  "fifo",
  "lifo",
  "dqueue",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "pythonic-fp-circulararray>=6.0.4",
  "pythonic-fp-fptools>=5.2.0",
]
dynamic = ["description"]

[project.urls]
Changelog = "https://github.com/grscheller/pythonic-fp-queues/blob/main/CHANGELOG.rst"
Documentation = "https://grscheller.github.io/pythonic-fp-queues/"
Homepage = "https://grscheller.github.io/pythonic-fp/homepage/html/"
Source = "https://github.com/grscheller/pythonic-fp-queues"

[project.optional-dependencies]
test = [
  "pytest>=8.4.1",
]

[tool.flit.module]
name = "pythonic_fp.queues"

[tool.mypy]
explicit_package_bases = true
local_partial_types = true
namespace_packages = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pylsp-mypy]
enabled = true
live-mode = true
dmypy = false
strict = true
report_progress = true

[tool.pytest]
addopts = [
  "-ra",
]
consider_namespace_packages = true
testpaths = ["tests/"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "E731",
  "C901",
]
"**/*.py" = ["E741"]

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72
